--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-/* General Styles */
+/* Styles généraux */
 
 * {
     margin: 0;
@@ -56,12 +56,12 @@ button:disabled {
     background: #7c5cbf94;
 }
 
-/* Join Page Styles */
+/* Style de la page "Join" */
 
 .centered-form {
     background: #333744;
     width: 100vw;
-    height: 100vh;   
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,7 +83,7 @@ button:disabled {
     width: 100%;
 }
 
-/* Chat Page Layout */
+/* Layout de la page de chat */
 
 .chat {
     display: flex;
@@ -97,7 +97,7 @@ button:disabled {
     overflow-y: scroll
 }
 
-/* Chat styles */
+/* Styles du chat */
 
 .chat__main {
     flex-grow: 1;
@@ -112,10 +112,10 @@ button:disabled {
     overflow-y: scroll;
 }
 
-/* Message Styles */
+/* Styles des messages */
 
 .message {
-    margin-bottom: 16px;   
+    margin-bottom: 16px;
 }
 
 .message__name {
@@ -133,7 +133,7 @@ button:disabled {
     color: #0070CC;
 }
 
-/* Message Composition Styles */
+/* Styles de la composition des messages */
 
 .compose {
     display: flex;
@@ -160,13 +160,13 @@ button:disabled {
     font-size: 14px;
 }
 
-/* Chat Sidebar Styles */
+/* Styles de la sidebar */
 
 .room-title {
     font-weight: 400;
     font-size: 22px;
     background: #2c2f3a;
-    padding: 24px;   
+    padding: 24px;
 }
 
 .list-title {
@@ -180,4 +180,32 @@ button:disabled {
     list-style-type: none;
     font-weight: 300;
     padding: 12px 24px 0 24px;
+}
+
+/* Styles de l'affichage des avatars*/
+.avatar-options {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.avatar-options label {
+    cursor: pointer;
+    width: 18%;
+    margin-bottom: 10px;
+}
+
+.avatar-options label img {
+    width: 100%;
+    height: auto;
+    border: 2px solid transparent;
+}
+
+.preview-container {
+    display: flex;
+    justify-content: center;
+    /* Centre horizontalement */
+    align-items: center;
+    /* Centre verticalement */
+    height: 150px;
 }
